src/test/rustdoc-ui/doc-without-codeblock.stderr
error: missing code example in this documentation
  --> $DIR/doc-without-codeblock.rs:3:1
   |
LL | /// Some docs.
   | ^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/doc-without-codeblock.rs:1:9
   |
LL | #![deny(missing_doc_code_examples)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: missing code example in this documentation
  --> $DIR/doc-without-codeblock.rs:9:5
   |
LL |     /// Or maybe not because she saved herself!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

